added artifact upload

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,10 @@ jobs:
       run: |
         npm install
         npm run build  
+    - uses: actions/upload-artifact@main
+      with:
+        name: webpack artifacts
+        path: public/
 
 
 # TEST Job   
