--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,8 +14,8 @@ jobs:
 
 # Build Job  
   build:
-
     runs-on: ubuntu-latest
+    # Steps
     steps:
     - uses: actions/checkout@v2
     - name: npm install and build webpack
@@ -30,13 +30,19 @@ jobs:
 
 # TEST Job   
   test:
+    needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
         node-version: [12.x, 14.x]
+    # Steps
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/download-artifact@main
+      with:
+        name: webpack artifacts
+        path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
